--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "devs": "nodemon ./bin/www"
   },
   "dependencies": {
     "@prisma/client": "^6.4.1",
@@ -15,6 +16,7 @@
     "morgan": "~1.9.1"
   },
   "devDependencies": {
+    "nodemon": "^3.1.9",
     "prisma": "^6.4.1"
   }
 }
